2008-02-03  Benjamin Mack  <mack@xnos.org>

	* Followup to #7361: Reset button has now a JS confirm question
	* Followup to #7346: opendocs top menu only is included once now
	* Feature #7346: Added "Open Documents" menu in top bar of new BE, made module optional
	* Followup to #7361: Save button was moved to bottom again
	* Followup to #7361: One CSH was still on the wrong line
	* Fixed #7361: Overhauled User setup module. Now has tabs and better usability, thanks to Steffen Kamper

2008-02-03  Michael Stucki  <michael@typo3.org>

	* Reverted feature #7337 because it is faulty and lacks proper documentation

2008-02-03  Ingo Renner  <ingo@typo3.org>

	 * fixed a positioning issue with the toolbar items in Safari
	 * added feature #7282: Show Realname of BE-User if available and link it to edit, credits Steffen Kamper
	 * fixed alignment of user name and icon in the toolbar
	 * adjusted non-t3skin module menu width to fit the wider div
	 * added feature #7367: Make the tree collapsable

2008-02-02  Benjamin Mack  <mack@xnos.org>

	* Fixed #7347: Pagetree was not responding correctly when logged out.  Thanks to Ingmar

2008-02-02  Ingo Renner  <ingo@typo3.org>

	* fixed module menu for long module names, credits Steffen Kamper
	* fixed t3skin's border.html: removed the xml prologue as it triggers IE's quirks mode
	* fixed bug #7352: New backend problems in FireFox, Safari, OmniWeb and Camino

2008-02-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Added feature #7336: Improve usability of Constants Editor
	* t3lib/class.ts_parser_ext.php: quotes changed from double to single, function index updated with extdeveval

2008-02-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* !!! #7350: Use PHP5 features in class.t3lib_div.php (static and type hinting)
	* #7351: Introduce $ACCESS_TIME/$SIM_ACCESS_TIME to improve Mysql query cache usage
	* Changed t3lib_div::get_tag_attributes/split_tag_attributes so that they always return an array
